<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.rahul.audiochat.profile.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="63dp"
        android:src="@drawable/ic_action_profile"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="75dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_edit"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="317dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="221dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/progress_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_status"
        android:layout_width="317dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/write_status"
        android:inputType="textPersonName"
        android:maxLines="2"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <android.support.v7.widget.CardView
        android:id="@+id/btn_submit_profile"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_status">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <!--<ProgressBar-->
        <!--android:id="@+id/progress_image"-->
        <!--android:visibility="gone"-->
        <!--style="?android:attr/progressBarStyle"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="156dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="88dp"-->
        <!--android:indeterminate="true"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/profile_image"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="1.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <ProgressBar
        android:id="@+id/progress_submit"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="243dp"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_submit_profile"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

</android.support.constraint.ConstraintLayout>
